changed up the panel: now all top level concepts are always visible, just concepts that are not on the plan are grayed out. fixed #88

--- a/modules/concepts/client/css/panel.css
+++ b/modules/concepts/client/css/panel.css
@@ -257,6 +257,9 @@ a[disabled] .map-icon {
     left: -3px;
 }
 
+.concept.notOnPlan > a > .concept-circle {
+    background: #aaa !important;
+}
 
 .concept > a {
     position: relative;
